# qemu

./: .gitignore  README.rst  qemu-options.hx
accel/: accel-system.c
accel/kvm/: kvm-all.c  trace-events
backends/: igvm.c  igvm.h
chardev/: char-ebpf.c  meson.build
hw/acpi/: aml-build.c
hw/char/: Makefile.objs  pci-levdev.c  serial-isa.c
hw/core/: machine.c  qdev.c
hw/i386/: Kconfig  acpi-build.c  meson.build  microvm-dt.c  pc.c  pc_piix.c  pc_q35.c  x86_dt_common.c  x86_dt_common.h
hw/i386/kvm/: apic.c
hw/misc/: Kconfig  Makefile.objs  backup_newdev.c  bpf_injection_msg.h  meson.build  mydev.c  newdev.c  testnewdev.c
hw/pci/: msi.c  msix.c
include/accel/: accel-ops.h
include/chardev/: char.h
include/hw/: boards.h  qdev-core.h
include/hw/core/: boards.h  cpu.h  qdev.h
include/hw/i386/: pc.h
include/hw/pci/: msi.h
include/qemu/: accel.h
include/standard-headers/linux/: ethtool.h
include/system/: igvm-cfg.h  igvm-internal.h  kvm.h  kvm_int.h
linux-headers/asm-x86/: kvm.h
linux-headers/linux/: kvm.h
qapi/: char.json  qom.json
stubs/: igvm.c
subprojects/: igvm.wrap
subprojects/packagefiles/igvm/: meson.build
subprojects/packagefiles/igvm/include/igvm/: igvm.h  igvm_defs.h
tests/unit/: test-qdev-global-props.c  test-qdev.c
